Salesforce-Deployment/force-app/main/default/objects/Retrieve__c/fields/PackageContentJson__c.field-meta.xml
<CustomField>
    <fullName>PackageContentJson__c</fullName>
    <label>Package Content Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>