Salesforce-Deployment/force-app/main/default/objects/Retrieve__c/fields/PackageFileContent__c.field-meta.xml
<CustomField>
    <fullName>PackageFileContent__c</fullName>
    <label>PackageFileContent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>